# storybook

./: .gitignore  AGENTS.md  CLAUDE.md  LESSONS-LEARNED.md  METHODOLOGY.md  README.md  agents.config.json.example  package-lock.json  package.json  run-storybook.sh
.github/workflows/: generate-claude.yml  generate-docs.yml  manual-generate.yml
apps/design-system/: .eslintrc.cjs  .gitignore  jest.config.js  package.json  test-vite.js  tsconfig.json  vite.config.ts
apps/design-system/.storybook/: main.ts  preview.tsx
apps/design-system/src/: index.ts
apps/design-system/src/components/: index.ts
apps/design-system/src/styles/: globals.css
apps/design-system/src/test/: setup.ts
apps/design-system/src/tokens/: borders.ts  colors.ts  index.ts  shadows.ts  spacing.ts  typography.ts
docs/: AGENTS_CONFIG.md  FRS.md  RDS.md  persona-accessibility-advocate.md  persona-brand-manager.md  persona-copywriter.md  persona-data-privacy-officer.md  persona-data-security-engineer.md  persona-devops-engineer.md  persona-frontend-developer.md  persona-internal-auditor.md  persona-journey-maps-v2.md  persona-journey-maps.md  persona-product-manager.md  persona-product-owner.md  persona-qa-engineer.md  persona-ui-designer.md  storybook-pain-points-summary.md
googlemaps-mcp-service/: .env.example  .eslintrc.js  .gitignore  .prettierrc  jest.config.js  package.json  tsconfig.json
googlemaps-mcp-service/src/cache/: cache-manager.ts  index.ts
googlemaps-mcp-service/src/types/: cache.ts  common.ts  config.ts  index.ts
googlemaps-mcp-service/src/utils/: config.ts  logger.ts
implementations/fastapi-neo4j-mysql/: .env.example  Dockerfile  README.md  docker-compose.yml
implementations/fastapi-neo4j-mysql/k8s/: configmap.yaml  deployment.yaml
implementations/fastapi-neo4j-mysql/methodology/: __init__.py  __main__.py  commands.py
implementations/laravel-mysql/: README.md
implementations/simpy-pyomo-mcp-system/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
implementations/simpy-pyomo-mcp-system/config/: development.yaml  production.yaml
implementations/simpy-pyomo-mcp-system/src/simpy_pyomo_mcp/: __init__.py
scripts/: generate-agents.js  generate-claude.js  generate-frs.js
scripts/adapters/: laravel-adapter.js
templates/: AGENTS.template.md  CLAUDE.template.md  FRS.template.md  UNIVERSAL-ADAPTATION-GUIDE.md
templates/technology-specific/: README.md
templates/technology-specific/autogluon/: AGENTS.autogluon.md  CLAUDE.autogluon.md  FRS.autogluon.md
templates/technology-specific/flask/: AGENTS.flask.md  CLAUDE.flask.md  FRS.flask.md
templates/technology-specific/googlemaps-mcp/: AGENTS.googlemaps-mcp.md  CLAUDE.googlemaps-mcp.md  FRS.googlemaps-mcp.md
templates/technology-specific/laravel-php/: AGENTS.laravel.md  CLAUDE.laravel.md  FRS.laravel.md
templates/technology-specific/neo4j-javascript/: AGENTS.neo4j-javascript.md  CLAUDE.neo4j-javascript.md
templates/technology-specific/neo4j-mcp/: AGENTS.neo4j-mcp.md  CLAUDE.neo4j-mcp.md
templates/technology-specific/neo4j-python/: AGENTS.neo4j-python.md  CLAUDE.neo4j-python.md
templates/technology-specific/openai-laravel-mcp/: AGENTS.openai-laravel-mcp.md  CLAUDE.openai-laravel-mcp.md
templates/technology-specific/python/: AGENTS.python.md  CLAUDE.python.md  FRS.python.md
templates/technology-specific/simpy-pyomo-mcp/: AGENTS.simpy-pyomo-mcp.md  CLAUDE.simpy-pyomo-mcp.md  FRS.simpy-pyomo-mcp.md
(+15 files in other folders)
